# Level-Renderer

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Assignment_1_Vulkan.sln  Assignment_1_Vulkan.vcxproj  Assignment_1_Vulkan.vcxproj.filters  Assignment_2_Vulkan.sln  Assignment_2_Vulkan.vcxproj  Assignment_2_Vulkan.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  GW_Defines.h  LevelExporter.py  PS.hlsl  Project Rubric.xlsx  README.md  VS.hlsl  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  defines.h  main.cpp  renderer.cpp  renderer.h
Assets/: 2Models.txt  GameLevel.txt  GameLevel2.txt  SmallRoom.txt  TestGameLevel.txt  bed3.txt  lvl1test.blend  lvl1test.blend1
Assets/H2B Models/: bathroomCabinet.h2b  bathroomMirror.h2b  bathroomSink.h2b  bathtub.h2b  bear.h2b  bedBunk.h2b  bedSingle.h2b  bench.h2b  benchCushion.h2b  benchCushionLow.h2b  bookcaseClosed.h2b  bookcaseClosedDoors.h2b  bookcaseClosedWide.h2b  bookcaseOpen.h2b  bookcaseOpenLow.h2b  cabinetBed.h2b  cabinetBedDrawer.h2b  cabinetBedDrawerTable.h2b  cabinetTelevision.h2b  cabinetTelevisionDoors.h2b  cardboardBoxClosed.h2b  cardboardBoxOpen.h2b  ceilingFan.h2b  chair.h2b  chairCushion.h2b  chairRounded.h2b  coatRack.h2b  coatRackStanding.h2b  computerMouse.h2b  computerScreen.h2b  desk.h2b  deskCorner.h2b  doorway.h2b  doorwayFront.h2b  doorwayOpen.h2b  dryer.h2b  floorCorner.h2b  floorCornerRound.h2b  floorHalf.h2b  kitchenBar.h2b  (+67 more)
Assets/Models/: bedDouble.h2b  books.h2b  chairDesk.h2b  computerKeyboard.h2b  floorFull.h2b  lampSquareFloor.h2b  loungeSofa.h2b  rugRounded.h2b  speaker.h2b  speakerSmall.h2b  wall.h2b  wallDoorway.h2b  wallWindow.h2b
Assignment_1_Vulkan.dir/Debug/: Assignment_1_Vulkan.exe.recipe
Assignment_1_Vulkan.dir/Debug/Assignme.25171FB4.tlog/: Assignment_1_Vulkan.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Assignment_1_Vulkan.dir/Release/: Assignment_1_Vulkan.exe.recipe
Assignment_1_Vulkan.dir/Release/Assignme.25171FB4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Assignment_2_Vulkan.dir/Debug/: Assignment_2_Vulkan.exe.recipe
Assignment_2_Vulkan.dir/Debug/Assignme.9879AC70.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  fxc.command.1.tlog  fxc.read.1.tlog  fxc.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/: PS.cso  VS.cso
Release/Programming Assignment 1/: main.cpp
Shaders/: PS.hlsl  VS.hlsl
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
